[gd_scene load_steps=4 format=3 uid="uid://dahwvnqctslu0"]

[ext_resource type="Script" uid="uid://bqx0xaxkq1v4l" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://brnfuefm1h7r4" path="res://assets/sprites/bg_grasslands.png" id="2_ekxnf"]
[ext_resource type="AudioStream" uid="uid://s6jjokcq3mho" path="res://assets/audio/bgm.mp3" id="3_bqqt6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_l6cm7")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640.5, 399.5)
scale = Vector2(1.24707, 1.55664)
texture = ExtResource("2_ekxnf")

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 344.0
offset_top = 227.0
offset_right = 898.0
offset_bottom = 323.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Delivery Game"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
offset_left = 350.0
offset_top = 426.0
offset_right = 892.0
offset_bottom = 503.0
theme_override_font_sizes/font_size = 50
text = "Play!"

[node name="HighScore" type="Label" parent="."]
layout_mode = 2
offset_left = 354.0
offset_top = 529.0
offset_right = 896.0
offset_bottom = 598.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "High Score: 0"
horizontal_alignment = 1

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 690.0
offset_right = 570.0
offset_bottom = 753.0
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="ControlsButton" type="Button" parent="."]
offset_left = 655.0
offset_top = 688.0
offset_right = 826.0
offset_bottom = 751.0
theme_override_font_sizes/font_size = 40
text = "Controls"

[node name="UI" type="CanvasLayer" parent="."]

[node name="Credits" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI/Credits"]
layout_mode = 0
offset_left = 332.0
offset_top = 150.0
offset_right = 929.0
offset_bottom = 659.0
color = Color(0, 0, 0, 0.701961)

[node name="CreditsBackButton" type="Button" parent="UI/Credits"]
layout_mode = 0
offset_left = 805.0
offset_top = 187.0
offset_right = 894.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 35
text = "Back"

[node name="CreditsText" type="Label" parent="UI/Credits"]
layout_mode = 0
offset_left = 540.0
offset_top = 172.0
offset_right = 711.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="ActualCredits" type="Label" parent="UI/Credits"]
layout_mode = 0
offset_left = 382.0
offset_top = 250.0
offset_right = 890.0
offset_bottom = 625.0
theme_override_font_sizes/font_size = 37
text = "Sprites: Kenney.nl Platformer Art Deluxe
SFX: Kenney.nl Interface Sounds
BGM:
Deltarune OST - Sandy Board"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Controls" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI/Controls"]
offset_left = 332.0
offset_top = 150.0
offset_right = 929.0
offset_bottom = 659.0
color = Color(0, 0, 0, 0.701961)

[node name="ControlsBackButton" type="Button" parent="UI/Controls"]
offset_left = 805.0
offset_top = 187.0
offset_right = 894.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 35
text = "Back"

[node name="CreditsText" type="Label" parent="UI/Controls"]
offset_left = 534.0
offset_top = 175.0
offset_right = 738.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 50
text = "Controls"

[node name="ActualControls" type="Label" parent="UI/Controls"]
offset_left = 382.0
offset_top = 266.0
offset_right = 887.0
offset_bottom = 625.0
theme_override_font_sizes/font_size = 37
text = "Movement: Left/Right Arrow Keys (or A/D)

Interact: E or Enter

Pause: Esc"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bqqt6")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="UI/Credits/CreditsBackButton" to="." method="_on_credits_back_button_pressed"]
[connection signal="pressed" from="UI/Controls/ControlsBackButton" to="." method="_on_controls_back_button_pressed"]
